Working on select player dropdown

--- a/assets/css/tic-tac.css
+++ b/assets/css/tic-tac.css
@@ -61,3 +61,10 @@
     margin: 0 auto;
     padding: 8%;
 }
+
+#reset {
+    width: 100%;
+    padding: 10px;
+    background-color: #f0ffff;
+    font-size: 20px;
+}
