--- a/assets/css/tic-tac.css
+++ b/assets/css/tic-tac.css
@@ -63,8 +63,35 @@
 }
 
 #reset {
-    width: 100%;
+    width: 50%;
     padding: 10px;
     background-color: #f0ffff;
     font-size: 20px;
+    float: left;
+}
+
+.playerSelection {
+    width: 50%;
+    float: left;
+}
+
+#player {
+    font-size: 20px;
+    width: 100%;
+    height: 45px;
+    padding-left: 50px;
+    background-color: #f4f6f7;
+}
+
+#message {
+    position: absolute;
+    background-color: bisque;
+    top: 40%;
+    width: 100%;
+    height: 50px;
+    text-align: center;
+}
+
+.highlight {
+    background-color: #ccc;
 }
